VR: Fix spinner for slow WebXR rendering

Bug: 881970
Change-Id: I23d7c563929d0c95459050669b3303eba3785128
Reviewed-on: https://chromium-review.googlesource.com/1216464
Reviewed-by: Michael Thiessen <mthiesse@chromium.org>
Commit-Queue: Aldo Culquicondor <acondor@chromium.org>
Cr-Commit-Position: refs/heads/master@{#589930}
Former-commit-id: fadad4d67ab25610e0d14143fd2996d85c9d3981